samples/_failures_safe/1761189754_c65276_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e3dfcd1.c: In function ‘main’:
./samples/SAFE/__tmp_1e3dfcd1.c:137:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  137 |     char filename
      |     ^~~~
./samples/SAFE/__tmp_1e3dfcd1.c:137:5: error: expected declaration or statement at end of input
